--- a/page-heads/index/document-head.pug
+++ b/page-heads/index/document-head.pug
@@ -2,9 +2,9 @@ doctype html
 html
     head
         meta(charset='utf-8')
-        title Scarlett and Lenny - reward eachother for being awesome
+        title Habit Rewards - reward yourself by sticking to your habits
         link(rel='manifest' href='manifest.json')
-        meta(name='description', content='This is a private PWA for Scarlett and Lenny. One pillar to stand against the fall to destructive normality on the relationship. Giving eachothers hints what we could do better, and rewarding eachother for really doing so. And no this app is not the only pillar standing for this mission, but a nicely handy one :D.')
+        meta(name='description', content='Create your habits and do them - and increase your own private Score! This app will let you do exactly that - maybe share your success with your friends - maybe print a token later?^^ we will see...')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
         
         link(rel="apple-touch-icon", sizes="180x180", href="/apple-touch-icon.png")
