--- a/source/allmodules/allstyles.styl
+++ b/source/allmodules/allstyles.styl
@@ -1,13 +1,10 @@
 @import '../addbuttonmodule/styles.styl'
-@import '../backgroundmodule/styles.styl'
 @import '../buttonstylemodule/styles.styl'
 @import '../contentmodule/styles.styl'
-@import '../darlingspagemodule/styles.styl'
-@import '../deedsmodule/styles.styl'
-@import '../editdeedpagemodule/styles.styl'
+@import '../edithabitpagemodule/styles.styl'
+@import '../habitsmodule/styles.styl'
 @import '../headermodule/styles.styl'
-@import '../manualaddframemodule/styles.styl'
-@import '../newdeedpagemodule/styles.styl'
+@import '../newhabitpagemodule/styles.styl'
 @import '../pointaddmodule/styles.styl'
 @import '../settingspagemodule/styles.styl'
 @import '../slideinframemodule/styles.styl'
