--- a/source/edithabitpagemodule/edithabitpage.pug
+++ b/source/edithabitpagemodule/edithabitpage.pug
@@ -1,10 +1,10 @@
-//- editdeedpage structure
+//- edithabitpage structure
 extends ../slideinframemodule/slideinframe.pug
 block content
-    #editdeedpage-content
-        h1 Edit your deed!
-        #deed-edit
-            include ../deedsmodule/deededit.pug
+    #edithabitpage-content
+        h1 Edit your habit!
+        #habit-edit
+            include ../habitsmodule/habitedit.pug
         #delete-button
             .click-button
                 svg#delete-button-icon: use(href="#svg-trash-icon")
