--- a/source/edithabitpagemodule/styles.styl
+++ b/source/edithabitpagemodule/styles.styl
@@ -1,8 +1,8 @@
-// editdeedpage styles
+// edithabitpage styles
 delete-button-size = 55px
 
-#deed-edit
-    .deed
+#habit-edit
+    .habit
         margin-top 25px
         margin-bottom 15px
 
