--- a/source/globalstyles/styles.styl
+++ b/source/globalstyles/styles.styl
@@ -8,9 +8,9 @@ Font
 /*==========================================================
 Colors
 ==========================================================*/
-cd-dark = #113137
-cd-bright = #EFEFC7
-cd-flash = #B73783
+cd-dark = black
+cd-bright = white
+cd-flash = #61DE2A
 
 
 /*==========================================================
@@ -25,6 +25,7 @@ General Tag Styles
 ==========================================================*/
 body
     color cd-bright
+    background-color: cd-dark
     text-align: center
     font-family: "SourceSans Pro", sans-serif
     font-size: 12pt
