--- a/source/headermodule/header.pug
+++ b/source/headermodule/header.pug
@@ -1,11 +1,8 @@
 //- header structure
 #header
     #header-left
-        .click-button
-            svg#heart-icon: use(href="#svg-heart-icon")
-            #darling-image.hidden
     #header-center.clickbutton
-        h1#darling-score-display
+        h1#private-score-display
     #header-right
         .click-button
             svg#settings-icon: use(href="#svg-settings-icon")
