--- a/source/newhabitpagemodule/styles.styl
+++ b/source/newhabitpagemodule/styles.styl
@@ -1,5 +1,5 @@
-// newdeedpage styles
-#newdeed-edit
-    .deed
+// newhabitpage styles
+#newhabit-edit
+    .habit
         margin-top: 25px
         margin-bottom: 15px
