--- a/source/habitsmodule/habitedit.pug
+++ b/source/habitsmodule/habitedit.pug
@@ -1,5 +1,5 @@
-.deed
-    .deed-inner
-        .deed-text-edit(contentEditable="true")
+.habit
+    .habit-inner
+        .habit-text-edit(contentEditable="true")
     svg.add-icon: use(href="#svg-add-icon")
 include ../pointaddmodule/pointadd.pug
