--- a/source/headermodule/header.pug
+++ b/source/headermodule/header.pug
@@ -1,6 +1,7 @@
 //- header structure
 #header
     #header-left
+        h1#app-name EasyHabits
     #header-center.clickbutton
         h1#private-score-display
     #header-right
