--- a/source/headermodule/styles.styl
+++ b/source/headermodule/styles.styl
@@ -17,6 +17,8 @@
         padding 10px
         font-size 35px
         color alpha(cd-flash, 0.8)
+#app-name
+    color cd-bright !important
 
 #settings-icon
     height 50px
