--- a/source/index/index.styl
+++ b/source/index/index.styl
@@ -12,3 +12,4 @@ Including global styles
 Including other components
 ==============================================================================*/
 @import '../allmodules/allstyles.styl'
+@import '../sebstyle/style.css'
