--- a/page-heads/index/document-head.pug
+++ b/page-heads/index/document-head.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         meta(charset='utf-8')
-        title Habit Rewards - reward yourself by sticking to your habits
+        title EasyHabits - Reward yourself by sticking to your Habits
         link(rel='manifest' href='manifest.json')
         meta(name='description', content='Create your habits and do them - and increase your own private Score! This app will let you do exactly that - maybe share your success with your friends - maybe print a token later?^^ we will see...')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
