--- a/source/globalstyles/styles.styl
+++ b/source/globalstyles/styles.styl
@@ -12,6 +12,8 @@ cd-dark = black
 cd-bright = white
 cd-flash = #61DE2A
 
+cd-background = cd-dark
+element-background = alpha(black, 0.97)
 
 /*==========================================================
 Colors
