--- a/source/index/indexbody.pug
+++ b/source/index/indexbody.pug
@@ -1,6 +1,5 @@
-body
-    include ../svgiconmodule/svgicon.pug
-    include ../headermodule/header.pug
-    include ../contentmodule/content.pug
-    include ../addbuttonmodule/addbutton.pug
-    include ../slideinframemodule/allframes.pug
+include ../svgiconmodule/svgicon.pug
+include ../headermodule/header.pug
+include ../contentmodule/content.pug
+include ../addbuttonmodule/addbutton.pug
+include components/slideinframes.pug
