--- a/source/allmodules/allstyles.styl
+++ b/source/allmodules/allstyles.styl
@@ -1,11 +1,15 @@
+@import '../accountsettingsmodule/styles.styl'
 @import '../addbuttonmodule/styles.styl'
 @import '../buttonstylemodule/styles.styl'
 @import '../contentmodule/styles.styl'
 @import '../edithabitpagemodule/styles.styl'
 @import '../habitsmodule/styles.styl'
 @import '../headermodule/styles.styl'
+@import '../messageboxmodule/styles.styl'
 @import '../newhabitpagemodule/styles.styl'
 @import '../pointaddmodule/styles.styl'
+@import '../qrdisplaymodule/styles.styl'
+@import '../qrreadermodule/styles.styl'
 @import '../settingspagemodule/styles.styl'
 @import '../slideinframemodule/styles.styl'
 @import '../svgiconmodule/styles.styl'
