--- a/source/index/indexbody.pug
+++ b/source/index/indexbody.pug
@@ -3,3 +3,6 @@ include ../headermodule/header.pug
 include ../contentmodule/content.pug
 include ../addbuttonmodule/addbutton.pug
 include components/slideinframes.pug
+include ../qrdisplaymodule/qrdisplay.pug
+include ../qrreadermodule/qrreader.pug
+include ../messageboxmodule/messagebox.pug
